--- a/d-fi.config.json
+++ b/d-fi.config.json
@@ -2,7 +2,7 @@
   "concurrency": 2,
   "saveLayout": {
     "track": "Music/{ART_NAME}/{ART_NAME} - {ALB_TITLE}/{ART_NAME} - {SNG_TITLE}",
-    "album": "Music/{ART_NAME}/{ART_NAME} - {ALB_TITLE}/{ART_NAME} - {SNG_TITLE}",
+    "album": "Music/{ALB_TITLE}/{SNG_TITLE}",
     "artist": "Music/{ART_NAME}/{ART_NAME} - {ALB_TITLE}/{ART_NAME} - {SNG_TITLE}",
     "playlist": "Playlist/{TITLE}/{SNG_TITLE}"
   },
