--- a/d-fi.config.json
+++ b/d-fi.config.json
@@ -7,7 +7,7 @@
     "playlist": "Playlist/{TITLE}/{SNG_TITLE}"
   },
   "playlist": {
-    "resolveFullPath": false,
+    "resolveFullPath": false
   },
   "trackNumber": false,
   "fallbackTrack": true,
